shifter/_test/results/2-Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 0
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: nginx
    deploymentconfig: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
